--- a/app.service/src/controllers/relatorios/produtos.ejs
+++ b/app.service/src/controllers/relatorios/produtos.ejs
@@ -36,12 +36,12 @@
     }
 
     header h1 {
-      font-size: 16px;  /* Reduzido pela metade */
+      font-size: 24px;  /* Aumentado em 50% */
       margin-left: 55px; /* Ajuste do título após reduzir o logo */
     }
 
     header p {
-      font-size: 7px; /* Reduzido pela metade */
+      font-size: 10px; /* Aumentado em 50% */
       margin: 2px 0;
     }
 
@@ -53,7 +53,7 @@
     }
 
     th, td {
-      padding: 4px 6px; /* Reduzido o padding */
+      padding: 6px 9px; /* Aumentado o padding em 50% */
       text-align: left;
       border-bottom: 1px solid #ddd;
     }
@@ -61,11 +61,11 @@
     th {
       background-color: #34495e;
       color: white;
-      font-size: 8px;  /* Reduzido pela metade */
+      font-size: 12px;  /* Aumentado em 50% */
     }
 
     td {
-      font-size: 7px;  /* Reduzido pela metade */
+      font-size: 10px;  /* Aumentado em 50% */
     }
 
     .price {
@@ -81,7 +81,7 @@
     }
 
     .summary p {
-      font-size: 8px; /* Reduzido pela metade */
+      font-size: 12px; /* Aumentado em 50% */
       margin: 2px 0;
     }
 
@@ -93,7 +93,7 @@
       color: white;
       padding: 5px 0;
       text-align: center;
-      font-size: 6px;  /* Reduzido pela metade */
+      font-size: 9px;  /* Aumentado em 50% */
       margin-top: 15px;
     }
 
@@ -111,7 +111,7 @@
     /* Paginação */
     .page-number {
       text-align: center;
-      font-size: 6px; /* Reduzido pela metade */
+      font-size: 9px; /* Aumentado em 50% */
       position: relative;
       width: 100%;
     }
@@ -120,7 +120,7 @@
     .container {
       width: 100%;
       margin: 0 auto;
-      padding: 0 8px;  /* Reduzido o padding */
+      padding: 0 12px;  /* Aumentado o padding em 50% */
     }
 
     /* Ajustes para melhorar o layout ao imprimir em PDF */
@@ -154,7 +154,7 @@
   </header>
 
   <div class="container">
-    <h2 style="font-size: 12px; margin-top: 0;">Detalhes dos produtos</h2>
+    <h2 style="font-size: 18px; margin-top: 0;">Detalhes dos produtos</h2>
     <table>
       <thead>
         <tr>
@@ -181,7 +181,7 @@
     </table>
 
     <div class="summary">
-      <h3 style="font-size: 10px;">Resumo do Relatório</h3>
+      <h3 style="font-size: 15px;">Resumo do Relatório</h3>
       <p><strong>Total de Vendas:</strong> R$ <%= totalVendas.toFixed(2) %></p>
       <p><strong>Total de Itens Vendidos:</strong> <%= totalItens %> produtos</p>
     </div>
