--- a/app.service/src/reports/layouts/movimentacao.html
+++ b/app.service/src/reports/layouts/movimentacao.html
@@ -38,21 +38,33 @@
     <table>
       <thead>
         <tr>
-          <th>ID</th>
+          <th>Cod.ID</th>
+          <th>Emissão</th>
+          <th>Código</th>
           <th>Nome</th>
           <th style="text-align: right;">Qtde</th>
           <th style="text-align: right;">Preço Unit.</th>
           <th style="text-align: right;">Total</th>
+          <th>Origem</th>
+          <th>Destino</th>
         </tr>
       </thead>
       <tbody>
         <% data.items.forEach(item => { %>
           <tr>
+            <td><%= item.movCab?.transacao %></td>
+            <td><%= new Intl.DateTimeFormat('pt-BR', { 
+              day: '2-digit', 
+              month: '2-digit', 
+              year: 'numeric' 
+            }).format(new Date(item.movCab?.emissao)).replace(',', '') %></td>
             <td><%= item.codprod %></td>
             <td><%= item.produto.descricao %></td>
             <td style="text-align: right;"><%= item.dataValues.qtde?.toFixed(2) || '0.00' %></td>
             <td style="text-align: right;"><%= item.dataValues.punit?.toFixed(2) || '0.00' %></td>
             <td style="text-align: right;"><%= (item.dataValues.qtde * item.dataValues.punit)?.toFixed(2) || '0.00' %></td>
+            <td><%= item.orig?.descricao %></td>
+            <td><%= item.dest?.descricao %></td>
           </tr>
         <% }); %>
       </tbody>
